# flake-gen

./: .gitignore  CONVENTIONS.md  Cargo.toml  README.md  flake.nix  scripts.nix
.aider.tags.cache.v4/: cache.db
src/: main.rs
src/templates/: agnostic.nix  rust.nix  typescript.nix
templates/: agnostic.nix  agnostic.template  cpp.nix  cpp.template  default.nix  elixir.template  go.nix  go.template  python.nix  python.template  rust.nix  rust.template  terraform.template  typescript.template
templates/agnostic/: gitignore.template
templates/rust/: flake.nix.template
test/: flake.nix
tests/agnostic/: flake.nix
tests/agnostic/all_flags/: envrc  flake.nix  gitignore
tests/agnostic/no_comments/: flake.nix
tests/agnostic/with_comments/: flake.nix
tests/cpp/all_flags/: flake.nix
tests/elixir/all_flags/: flake.nix
tests/elixir/no_flags/: flake.nix
tests/go/: flake.nix
tests/go/all_flags/: flake.nix
tests/python/: flake.nix
tests/python/all_flags/: flake.nix
tests/rust/: flake.nix
tests/rust/all_flags/: flake.nix
tests/rust/no_comments/: flake.nix
tests/rust/with_comments/: flake.nix  gitignore  scripts.nix
tests/terraform/: flake.nix
tests/terraform/all_flags/: flake.nix
tests/typescript/: flake.nix
tests/typescript/no_flags/: flake.nix
