[package]
name = "flake-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.37", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
strum = "0.27.1"
tempdir = "0.3.7"
